<resources>
    <string name="app_name">OpenAPI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Intent extras -->
    <string name="auth_token">auth_token</string>
    <string name="password_reset_info">We\'ve emailed you instructions for setting your password. If an account exists with the email you entered.
        You should receive them shortly.If you don\'t receive an email, please make sure you\'ve entered the address you registered with,
        and check your spam folder.</string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="return_to_launcher_fragment">Return</string>
    <string name="text_error">Error</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="email_field">Email</string>
    <string name="field_password">Password</string>
    <string name="field_login">Login</string>
    <string name="field_username">Username</string>
    <string name="field_confirm_password">Confirm password</string>
    <string name="field_register">Register</string>
    <string name="network_error_response">Error</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="my_blogs">My Blogs</string>
    <string name="home">Home</string>
    <string name="create">Create</string>
    <string name="fragment_main">fragment_main</string>
    <string name="fragment_create_blog">fragment_create_blog</string>
    <string name="fragment_update_blog">fragment_update_blog</string>
    <string name="fragment_view_blog">fragment_view_blog</string>
    <string name="fragment_account">fragment_account</string>
    <string name="fragment_change_password">fragment_change_password</string>
    <string name="fragment_blog">fragment_blog</string>
</resources>
