<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/main_nav_graph"
            app:startDestination="@id/blogFragment">

    <fragment android:id="@+id/blogFragment"
              android:name="com.codingwithmitch.openapi.ui.main.blog.BlogFragment"
              android:label="@string/fragment_blog"
              tools:layout="@layout/fragment_blog">

        <action android:id="@+id/action_mainFragment_to_createBlogFragment"
                app:destination="@id/createBlogFragment"
                app:popEnterAnim="@anim/fade_in"
                app:popExitAnim="@anim/fade_out"
                app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out"
        />

        <action android:id="@+id/action_mainFragment_to_viewBlogFragment"
                app:destination="@id/viewBlogFragment"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
        />

        <action android:id="@+id/action_mainFragment_to_accountFragment"
                app:destination="@id/accountFragment"
                app:popEnterAnim="@anim/fade_in"
                app:popExitAnim="@anim/fade_out"
                app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out"/>

    </fragment>

    <fragment android:id="@+id/createBlogFragment"
              android:name="com.codingwithmitch.openapi.ui.main.blog.CreateBlogFragment"
              android:label="@string/fragment_create_blog"
              tools:layout="@layout/fragment_create_blog">


    </fragment>

    <fragment android:id="@+id/updateBlogFragment"
              android:name="com.codingwithmitch.openapi.ui.main.blog.UpdateBlogFragment"
              android:label="@string/fragment_update_blog"
              tools:layout="@layout/fragment_update_blog">

    </fragment>

    <fragment android:id="@+id/viewBlogFragment"
              android:name="com.codingwithmitch.openapi.ui.main.blog.ViewBlogFragment"
              android:label="@string/fragment_view_blog"
              tools:layout="@layout/fragment_view_blog">


        <action android:id="@+id/action_viewBlogFragment_to_updateBlogFragment"
                app:destination="@id/updateBlogFragment"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
        />
    </fragment>

    <fragment android:id="@+id/accountFragment"
              android:name="com.codingwithmitch.openapi.ui.main.account.AccountFragment"
              android:label="@string/fragment_account"
              tools:layout="@layout/fragment_account">

        <action android:id="@+id/action_accountFragment_to_changePasswordFragment"
                app:destination="@id/changePasswordFragment"
                app:popEnterAnim="@anim/fade_in"
                app:popExitAnim="@anim/fade_out"
                app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out"/>
    </fragment>

    <fragment android:id="@+id/changePasswordFragment"
              android:name="com.codingwithmitch.openapi.ui.main.account.ChangePasswordFragment"
              android:label="@string/fragment_change_password"
              tools:layout="@layout/fragment_change_password"/>
</navigation>




















